kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
spec:
  ingressClassName: nginx
  rules:
  - host: "alertmanager.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "alertmanager.nucstack.com"
